[gd_scene load_steps=7 format=3 uid="uid://d2fjoqrty8s11"]

[ext_resource type="Texture2D" uid="uid://djhhbuftdhspm" path="res://scenes/Title_Screen.png" id="1_4ignj"]
[ext_resource type="Script" uid="uid://bxds3xgo3bogk" path="res://scenes/TitleScreen.gd" id="1_wosw1"]
[ext_resource type="Texture2D" uid="uid://dr4arywab33g5" path="res://scenes/start_button.png" id="3_pyl7j"]
[ext_resource type="AudioStream" uid="uid://dvwybkoru1wy0" path="res://scenes/zapsplat_industrial_switch_plastic_drill_reverse_toggle_click_003_110099.mp3" id="4_4rr2b"]
[ext_resource type="Texture2D" uid="uid://dnd4otuj1oghw" path="res://scenes/exit_button.png" id="4_b3w7a"]
[ext_resource type="AudioStream" uid="uid://c0tho7is8j2lj" path="res://scenes/One Man Symphony - A New Day's Hurry (Free) - 01 A New Day Begins (General Background Music).mp3" id="6_4rr2b"]

[node name="Title" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wosw1")

[node name="TitleScreen" type="Sprite2D" parent="Control"]
position = Vector2(240, 135)
texture = ExtResource("1_4ignj")

[node name="StartButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 186.0
offset_top = 84.0
offset_right = 330.0
offset_bottom = 148.0
texture_hover = ExtResource("3_pyl7j")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="Control/StartButton"]
stream = ExtResource("4_4rr2b")

[node name="ExitButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 186.0
offset_top = 139.0
offset_right = 330.0
offset_bottom = 203.0
texture_hover = ExtResource("4_b3w7a")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="Control/ExitButton"]
stream = ExtResource("4_4rr2b")

[node name="Music" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("6_4rr2b")
autoplay = true
